--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,9 @@ GOOGLE_SECRET="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"
 
 NEXTAUTH_SECRET="rahasia123"
 
-NEXTAUTH_URL="http://localhost:3000"
+# NEXTAUTH_URL="http://localhost:3000"
 
-# NEXTAUTH_URL="https://alvinznutra-animev2.vercel.app"
+NEXTAUTH_URL="https://alvinznutra-animev2.vercel.app"
 
 
 
