--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.2",
-    "@prisma/client": "5.22.0",
+    "@prisma/client": "^5.22.0",
     "@prisma/extension-accelerate": "^0.6.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
